[package]
name = "official_download"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
colored = "3.0.0"
config = "0.15.11"
eyre = "0.6.12"
flexi_logger = "0.29.8"
futures = "0.3.31"
handlebars = "6.3.2"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
